# c--projects

code for interview practice/codility practice/: helps site.txt
code for interview practice/codility practice/Lesson 1-Iterations/: BinaryGap.cpp
code for interview practice/codility practice/Lesson 10-Prime and composite numbers/: CountFactors.cpp  Flags.cpp  MinPerimeterRectangle.cpp  Peaks.cpp  desktop.ini
code for interview practice/codility practice/Lesson 11-Sieve of Eratosthenes/: CountNonDivisible.cpp  CountSemiprimes.cpp
code for interview practice/codility practice/Lesson 2-Arrays/: CyclicRotation.cpp  OddOccurrencesInArray.cpp
code for interview practice/codility practice/Lesson 3-Time Complexity/: FrogJmp.cpp  PermMissingElem.cpp  TapeEquilibrium.cpp
code for interview practice/codility practice/Lesson 4-Counting Elements/: FrogRiverOne.cpp  MaxCounters.cpp  MissingInteger.cpp  PermCheck.cpp
code for interview practice/codility practice/Lesson 5-Prefix Sums/: CountDiv.cpp  GenomicRangeQuery.cpp  MinAvgTwoSlice.cpp  PassingCars.cpp
code for interview practice/codility practice/Lesson 6-Sorting/: Distinct.cpp  MaxProductOfThree.cpp  NumberOfDiscIntersections.cpp  Triangle.cpp
code for interview practice/codility practice/Lesson 7-Stacks and Queues/: Brackets.cpp  Nested.cpp  fish.cpp
code for interview practice/codility practice/Lesson 8-Leader/: Dominator.cpp  EquiLeader.cpp
code for interview practice/codility practice/Lesson 9-Maximum slice problem/: MaxDoubleSliceSum.cpp  MaxProfit.cpp  MaxSliceSum.cpp
data_structures_algorithms_cpp/: .gitignore  data_structures_algorithms_cpp.pptx
data_structures_algorithms_cpp/exercises/: CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp  tests_results.xml
data_structures_algorithms_cpp/exercises/.vscode_basic_debug_v1/: tasks.json
data_structures_algorithms_cpp/exercises/01-BigO/: LinkedList.cpp  LinkedList.h  main.cpp
data_structures_algorithms_cpp/exercises/01-BigO/QUESTION/: FindKthNodeFromEnd.txt  PartitionList.txt  RemoveDuplicates.cpp  hasLoop.cpp  hasLoop.txt
data_structures_algorithms_cpp/exercises/DoublyLinkedLists/: DoublyLinkedList.cpp  DoublyLinkedList.h  main.cpp
data_structures_algorithms_cpp/exercises/LinkedLists/: LinkedList.cpp  main.cpp
data_structures_algorithms_cpp/exercises/LinkedLists/QUESTION/: BinaryToDecimal.cpp  BinaryToDecimal.txt  FindKthNodeFromEnd.cpp  FindMiddleNode.cpp  FindMiddleNodeNote.txt  PartitionList.cpp  ReverseBetween.cpp
data_structures_algorithms_cpp/exercises/tests/: DoublyLinkedListTest.cpp  LinkedListTest.cpp  LinkedListTest_old.cpp
matrix implementation/: Makefile.txt  README.txt  main.cpp  matrix .cpp  matrix .h
simulator of random movement of people and dogs/: Character.cpp  Character.h  ColorDemo.cc  Dog.cpp  Dog.h  DogQueue.cpp  DogQueue.h  Makefile.txt  Person.cpp  Person.h  PersonQueue.cpp  PersonQueue.h  README.txt  Simulator.cpp  Simulator.h  main.cpp
